# delta-E

./: README.md  pyproject.toml
src/: delta_E.py
src/delta_E.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
